fix about image stretching

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -15,6 +15,7 @@
     &__pictures{
         display: flex;
         justify-content: center;
+        align-items: center;
 
     }
 
